--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: ADAXASD
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-Good news everyone!
+Good news everyone!!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
