--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: My own blog
+email: sushimeowcat@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Hello and welcome to my own personal website.
   It is currently under construction.
   Content will follow soon!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://adaxasd.github.io/" # the base hostname & protocol for your site
+twitter_username: N.A.
+github_username:  adaxasd
 
 # Build settings
 markdown: kramdown
